Add support for environment variables, fix .gitignore

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "cloudinary": "^1.4.6",
     "cron": "^1.1.1",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "multiparty": "^4.1.2",
