--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,15 @@
 #Server port
 #PORT=3000
 
+#Cloud API
+CLOUD_NAME=FILL_ME_IN
+CLOUD_KEY=FILL_ME_IN
+CLOUD_SECRET=FILL_ME_IN
+
+#Twilio API
+TWILIO_SID=FILL_ME_IN
+TWILIO_TOKEN=FILL_ME_IN
+
 #MYSQL
-#SQL_USER=your_username_here
-#SQL_PASS=your_password_here
+#SQL_USER=root
+#SQL_PASS=password            #Leave me commented for empty password
