Add db name to .env

--- a/server/.env.example
+++ b/server/.env.example
@@ -14,5 +14,6 @@ TWILIO_SID=FILL_ME_IN
 TWILIO_TOKEN=FILL_ME_IN
 
 #MYSQL
+#SQL_DB=gitgreat
 #SQL_USER=root
 #SQL_PASS=password            #Leave me commented for empty password
