Add start scripts to package.json, add server log

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "babel . --out-dir public/compiled --presets=es2015,react --ignore=node_modules,compiled,server,db --source-maps inline --watch"
+    "compile": "babel . --out-dir public/compiled --presets=es2015,react --ignore=node_modules,compiled,server,db --source-maps inline --watch &",
+    "start": "nodemon server.js 2>&1 | log/.predate.sh | tee -a log/server.log ",
+    "start-blind" : "nodemon server.js 2>&1 | log/.predate.sh >> log/server.log & ",
+    // "stop": "killall -9 node",
+    "tail": "tail -f log/server.log"
   },
   "repository": {
     "type": "git",
