--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "babel . --out-dir public/compiled --presets=es2015,react --ignore=node_modules,compiled,server,db --source-maps inline --watch &",
     "start": "nodemon server/server.js 2>&1 | log/.predate.sh | tee -a log/server.log ",
-    "start-blind" : "nodemon server.js 2>&1 | log/.predate.sh >> log/server.log & ",
+    "start-blind" : "nodemon server/server.js 2>&1 | log/.predate.sh >> log/server.log & ",
     "tail": "tail -f log/server.log"
   },
   "repository": {
