--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "compile": "babel . --out-dir public/compiled --presets=es2015,react --ignore=node_modules,compiled,server,db --source-maps inline --watch &",
     "start": "nodemon server/server.js 2>&1 | log/.predate.sh | tee -a log/server.log ",
-    "start-blind" : "nodemon server/server.js 2>&1 | log/.predate.sh >> log/server.log & ",
-    "tail": "tail -f log/server.log"
+    "start-blind": "nodemon server/server.js 2>&1 | log/.predate.sh >> log/server.log & ",
+    "tail": "tail -f log/server.log",
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -43,6 +45,8 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.14.0"
+    "react-router": "^3.0.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
