--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "react-router": "^3.0.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-livereload-plugin": "^0.9.0"
   }
 }
