--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cron": "^1.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "morgan": "^1.7.0",
     "multiparty": "^4.1.2",
     "mysql": "^2.12.0",
