--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "cron": "^1.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "google-maps-react": "^1.0.19",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.2",
     "morgan": "^1.7.0",
     "multiparty": "^4.1.2",
     "mysql": "^2.12.0",
